ggz-client-libs/ggzcore/ggzcore.h

/* Definitions for all internal ggzcore structures. */

/** @brief A server object containing all information about a connection */
typedef struct _GGZServer   GGZServer;
/** @brief Contains information about a _game type_.
 *  @note Each room has one game type; a game may be used in multiple rooms.
 */
typedef struct _GGZGameType GGZGameType;
/** @brief Contains information about a single module.
 *  A game module, on the client, is an executable designed to play a game.
 *  Each game type may have many modules that play it.
 */
typedef struct _GGZModule   GGZModule;
/** @brief Contains information about a single game table.
 *  This contains information about a table we are present at or are about
 *  to launch.  It is thus associated with both a GGZTable and a GGZModule.
 */
typedef struct _GGZGame     GGZGame;
/** GGZ Event hook function type, used as a callback for events */
typedef GGZHookReturn (*GGZHookFunc)(unsigned int id, 
				     const void* event_data, 
				     const void* user_data);
/** A GGZGameEvent is an event associated with the game, that is triggered
 *  by a communication from the server or from the game.  When a game
 *  event occurs, the associated event handle will be called, and will be
 *  passed the event data (a void*) along with the (optional) user data.
 *  All game events apply to the current game.  Game events are usually
 *  triggered by calling ggzcore_server_read_data or ggzcore_game_read_data.
 *  @see ggzcore_game_add_event_hook
 *  @see ggzcore_server_read_data
 */
typedef enum {
	/** A game was launched by the player (you).  After this the core
	 *  client should call ggzcore_game_get_control_fd, monitor the
	 *  socket that function returns, and call ggzcore_game_read_data
	 *  when there is data pending.  This event is triggered inside of
	 *  ggzcore_game_launch.
	 *  @param data NULL
	 *  @see ggzcore_game_launch */
	GGZ_GAME_LAUNCHED,

	/** Your game launch has failed.  Triggered instead of
	 *  GGZ_GAME_LAUNCHED when there's a failure somewhere.
	 *  @param data NULL
	 *  @see GGZ_GAME_LAUNCHED */
	GGZ_GAME_LAUNCH_FAIL,

	/** Negotiation with server was successful.  This should happen
	 *  some time after the launch succeeds.  The core client need do
	 *  nothing at this point.
	 *  @param data NULL */
	GGZ_GAME_NEGOTIATED,

	/** Negotiation was not successful, game launch failed.
	 *  @todo Currently this can't actually happen... */
	GGZ_GAME_NEGOTIATE_FAIL,

	/** Game reached the 'playing' state.  When this happens the core
	 *  client should call ggzcore_room_launch_table or
	 *  ggzcore_room_join_table to finalize the game join.
	 *  @param data NULL */
	GGZ_GAME_PLAYING
} GGZGameEvent;
/** @brief The environment a game frontend expects.
 *
 *  Core clients should offer those game modules which fit their
 *  own environment.
 */
typedef enum {
	GGZ_ENVIRONMENT_PASSIVE, /**< No GUI, no interaction with user */
	GGZ_ENVIRONMENT_CONSOLE, /**< Text console */
	GGZ_ENVIRONMENT_FRAMEBUFFER, /**< VESA or framebuffer */
	GGZ_ENVIRONMENT_XWINDOW, /**< X11 windowed mode (default) */
	GGZ_ENVIRONMENT_XFULLSCREEN /**< X11 fullscreen mode */
} GGZModuleEnvironment;
/** @brief Get the name of the game type. */
const char * ggzcore_gametype_get_name(const GGZGameType *type);
/** @brief Get the protocol "engine" used by the game type. */
const char* ggzcore_gametype_get_prot_engine(const GGZGameType *type);
/** @brief Get the version of the protocol the game uses. */
const char* ggzcore_gametype_get_prot_version(const GGZGameType *type);
/** @brief Get the version of the game itself. */
const char* ggzcore_gametype_get_version(const GGZGameType *type);
/** @brief Get the author of the game. */
const char* ggzcore_gametype_get_author(const GGZGameType *type);
/** @brief Get a URL for more info about the game. */
const char* ggzcore_gametype_get_url(const GGZGameType *type);
/** @brief Get a description of the game. */
const char* ggzcore_gametype_get_desc(const GGZGameType *type);
/** @brief Get the maximum number of players the game can support.
 *  @see ggzcore_gametype_num_players_is_valid */
int ggzcore_gametype_get_max_players(const GGZGameType *type);
/** @brief Get the maximum number of bots the game can support.
 *  @see ggzcore_gametype_bots_is_valid */
int ggzcore_gametype_get_max_bots(const GGZGameType *type);
/** @brief Return TRUE iff spectators are allowed for this game type. */
int ggzcore_gametype_get_spectators_allowed(const GGZGameType *type);
/** @brief Return TRUE iff the given number of players is valid. */
int ggzcore_gametype_num_players_is_valid(const GGZGameType *type,
					  unsigned int num);
/** @brief Return TRUE iff the given number of bots is valid. */
int ggzcore_gametype_num_bots_is_valid(const GGZGameType *type,
				       unsigned int num);
/* Group of configuration functions */
/* -------------------------------- */

/** ggzcore_conf_initialize()
 *	Opens the global and/or user configuration files for the frontend.
 *	Either g_path or u_path can be NULL if the file is not to be used.
 *	The user config file will be created if it does not exist.
 *
 *	@return: 0 on success, negative on failure
 */
int ggzcore_conf_initialize	(const char	*g_path,
				 const char	*u_path);
/** ggzcore_conf_write_string() - Write a string to the user config file
 *
 * @param section	section to store value in
 * @param key		key to store value under
 * @param value		value to store
 *
 * @return int : 0 if successful, -1 on error
 */
int ggzcore_conf_write_string(const char *section, 
			      const char *key, 
			      const char *value);
/** ggzcore_conf_write_int() - Write a integer to the user config file
 *
 * @param section	section to store value in
 * @param key		key to store value under
 * @param value		value to store
 *
 * @return int : 0 if successful, -1 on error
 */
int ggzcore_conf_write_int(const char *section, 
			   const char *key, 
			   int value);
/** ggzcore_conf_write_list() - Write a list to the user config file
 *
 * @param section	section to store value in
 * @param key		key to store value under
 * @param argc		count of string arguments in list
 * @param argv		array of NULL terminated strings
 *
 * @return int : 0 if successful, -1 on error
 */
int ggzcore_conf_write_list(const char *section, 
			    const char *key, 
			    int argc, 
			    char **argv);
/** ggzcore_conf_read_string() - Read a string from the configuration file(s)
 *
 * @param section	section to get value from
 * @param key		key value was stored under
 * @param def		default value to return if none is found
 *
 * @return
 *   a dynamically allocated string from the configuration file
 * OR
 *   a dynamically allocated copy of the default string
 *
 * @note The default may be set to NULL, in which case a NULL will be
 * returned if the value could not be found in either configuration file.
 */
char * ggzcore_conf_read_string(const char *section, 
				const char *key, 
				const char *def);
/** ggzcore_conf_read_int() - Read a integer from the configuration file(s)
 *
 * @param section	section to get value from
 * @param key		key value was stored under
 * @param def		default value to return if none is found
 *
 * @return
 *   an integer from the configuration file
 * OR
 *   the default value
 *
 * @note There is no guaranteed way to find if the call failed.  If you
 * must know, call ggzcore_conf_read_string with a NULL default value and
 * check for the NULL return.
 */
int ggzcore_conf_read_int(const char *section, const char *key, int def);
/** ggzcore_conf_read_list() - Read a list from the configuration file(s)
 *
 * @param section	section to get value from
 * @param key		key value was stored under
 * @param argcp		ptr to int which will receive the list entry count
 * @param argvp		a pointer to a dynamically allocated array
 * 			that ggzcore_conf_read_list() will build
 *
 * @return int : 0 if successful, -1 on error
 */
int ggzcore_conf_read_list(const char *section, 
			   const char *key, 
			   int *argcp, 
			   char ***argvp);
/** ggzcore_conf_remove_section() - Removes a section from the user config file
 *
 * @param section	section to remove
 *
 * @return
 * int : 0 if successful, -1 on error, 1 on soft error (section did not exist)
 */
int ggzcore_conf_remove_section(const char *section);
/** ggzcore_conf_remove_key() - Removes a key entry from the user config file
 *
 * @param section	section to remove
 * @param key		key entry to remove
 *
 * @return
 * int : 0 if success, -1 on error, 1 on soft error (section/key didn't exist)
 */
int ggzcore_conf_remove_key(const char *section, const char *key);
/** ggzcore_conf_commit() - Commits the core user config file to disk
 *
 * @return:
 * int : 0 if successful, -1 on error
 */
int ggzcore_conf_commit(void);
/* Game module related functions */
/* ----------------------------- */

/** @brief This returns the number of registered modules */
unsigned int ggzcore_module_get_num(void);
/** This adds a local module to the list.  It returns 0 if successful or
    -1 on failure. */
int ggzcore_module_add(const char *name,
	               const char *version,
	               const char *prot_engine,
	               const char *prot_version,
                       const char *author,
		       const char *frontend,
		       const char *url,
		       const char *exe_path,
		       const char *icon_path,
		       const char *help_path,
		       GGZModuleEnvironment environment);
		       


/** @brief Returns how many modules support this game and protocol */
int ggzcore_module_get_num_by_type(const char *game, 
				   const char *engine,
				   const char *version);
/** @brief Returns n-th module that supports this game and protocol */
GGZModule* ggzcore_module_get_nth_by_type(const char *game, 
					  const char *engine,
					  const char *version,
					  unsigned int num);
/** @brief Return the name of the module. */
const char * ggzcore_module_get_name(const GGZModule *module);
/** @brief Return the (game?) version of the module. */
const char* ggzcore_module_get_version(const GGZModule *module);
/** @brief Return the name of the module's protocol engine. */
const char* ggzcore_module_get_prot_engine(const GGZModule *module);
/** @brief Return the version of the module's protocol engine. */
const char* ggzcore_module_get_prot_version(const GGZModule *module);
/** @brief Return the author of the module. */
const char* ggzcore_module_get_author(const GGZModule *module);
/** @brief Return the module's frontend type. */
const char* ggzcore_module_get_frontend(const GGZModule *module);
/** @brief Return the URL associated with the module. */
const char* ggzcore_module_get_url(const GGZModule *module);
/** This is (intended to be) an optional xpm file that the module can provide
 *  to use for representing the game graphically. */
const char* ggzcore_module_get_icon_path(const GGZModule *module);
/** @brief Return the help path of the module (?). */
const char* ggzcore_module_get_help_path(const GGZModule *module);
/** @brief Return the executable arguments for the module.  See exec(). */
char** ggzcore_module_get_argv(const GGZModule *module);
/* Functions related to game clients */
/* --------------------------------- */

/** @brief Make a new game object */
GGZGame* ggzcore_game_new(void);
/** @brief Initialize the game object. */
int ggzcore_game_init(GGZGame *game, GGZServer *server, GGZModule *module);
/** @brief Free the game object. */
void ggzcore_game_free(GGZGame *game);
/** @brief Register a hook for a game event.
 *  @see ggzcore_server_add_event_hook_full
 *  @see ggzcore_room_add_event_hook_full
 */
int ggzcore_game_add_event_hook_full(GGZGame *game,
				     const GGZGameEvent event, 
				     const GGZHookFunc func,
				     const void *data);
/** @brief Remove a specified hook from a game event.
 *  @see ggzcore_server_remove_event_hook_id
 *  @see ggzcore_room_remove_event_hook_id
 */
int ggzcore_game_remove_event_hook_id(GGZGame *game,
				      const GGZGameEvent event, 
				      const unsigned int hook_id);
/** @brief Return the control (ggzmod) socket for the game. */
int  ggzcore_game_get_control_fd(const GGZGame *game);
/** @brief Return the game's server socket. Needed only for channels set up by ggzcore. */
void ggzcore_game_set_server_fd(GGZGame *game, unsigned int fd);
/** @brief Return the module set for the game. */
GGZModule* ggzcore_game_get_module(const GGZGame *game);
/** @brief Launch thee game! */
int ggzcore_game_launch(GGZGame *game);
/** @brief Read data from the game.
 *  When data is pending on the control socket, call this function.
 *  @return negative on error
 *  @see ggzcore_game_get_control_fd */
int ggzcore_game_read_data(GGZGame *game);