playground/ggz-python/generated-pyrex/pyggzcore.pyx


cdef class GameType:
    cdef GGZGameType *_type
    def __init__(self):
        self._type = NULL
    cdef void set_type(self, GGZGameType *atype):
        self._type = atype
    def get_name(self):
        return ggzcore_gametype_get_name(self._type)
    def get_prot_engine(self):
        return ggzcore_gametype_get_prot_engine(self._type)
    def get_prot_version(self):
        return ggzcore_gametype_get_prot_version(self._type)
    def get_version(self):
        return ggzcore_gametype_get_version(self._type)
    def get_author(self):
        return ggzcore_gametype_get_author(self._type)
    def get_url(self):
        return ggzcore_gametype_get_url(self._type)
    def get_desc(self):
        return ggzcore_gametype_get_desc(self._type)
    def get_max_players(self):
        return ggzcore_gametype_get_max_players(self._type)
    def get_max_bots(self):
        return ggzcore_gametype_get_max_bots(self._type)
    def get_spectors_allowed(self):
        return ggzcore_gametype_get_spectators_allowed(self._type)
    def num_players_is_valid(self, num):
        return ggzcore_gametype_num_players_is_valid(self._type, num)
    def num_bots_is_valid(self, num):
        return ggzcore_gametype_num_bots_is_valid(self._type, num)

cdef class Conf:
    # FIXME: Should most of the methods be static?
    def __init__(self, g_path, u_path):
        ggzcore_conf_initialize(g_path, u_path)
    def write(self, section, key, value):
        cdef char **argv
        if isinstance(value, str):
            ggzcore_conf_write_string(section, key, value)
        elif isinstance(self, int):
            ggzcore_conf_write_int(section, key, value)
        elif isinstance(self, list):
            tmpargv = PyMem_Malloc(len(list))
            argv[0] = tmpargv
            for i from 0 <= i < len(list):
                tmpi = PyString_AsString(list[i])
                argv[i] = tmpi
            ggzcore_conf_write_list(section, key, len(list), argv)
            for i from 0 <= i < len(list):
                PyMem_Free(argv[i])
            PyMem_Free(tmpargv)
        else:
            # bad!
            pass
    def read_string(self, section, key, locdef):
        return ggzcore_conf_read_string(section, key, locdef)
    def read_int(self, section, key, locdef):
        return ggzcore_conf_read_int(section, key, locdef)
    def read_list(self, section, key):
        cdef int argcp
        cdef char** argvp
        ggzcore_conf_read_list(section, key, &argcp, &argvp)
        alist = []
        # FIXME: Do I need to free argv?
        for i from 0 <= i < argcp:
            alist.append(PyString_FromString(argv[i]))
            PyMem_Free(argv[i])
        PyMem_Free(argv)
        return alist
    def remove_section(self, section):
        return ggzcore_conf_remove_section(section)
    def remove_key(section, key):
        return ggzcore_conf_remove_key(section, key)
    def commit(self):
        return ggzcore_conf_commit()

cdef class Module:
    # FIXME: Should some of the methods be static?
    cdef GGZModule *_module
    def __init__(self):
        self._module = NULL
    cdef void set_module(self, GGZModule *amodule):
        self._module = amodule

    def get_num(self):
        return ggzcore_module_get_num()
    def add(name, version, prot_engine, prot_version, author, frontend, 
            url, exe_path, icon_path, help_path):
        return ggzcore_module_add(name, version, prot_engine, prot_version,
                author, frontend, url, exe_path, icon_path, help_path)
    def get_num_by_type(self, game, engine, version):
        return ggzcore_module_get_num_by_type(game, engine, version)
    def get_nth_by_type(self, name, engine, version, num):
        cdef GGZModule *amodule
        cdef Module pymodule
        amodule = ggzcore_module_get_nth_by_type(name, engine, version, num)
        pymodule = Module()
        pymodule.set_module(amodule)
        return pymodule

    def launch(self, module):
        ggzcore_module_launch(self._module)
    def get_name(self):
        return ggzcore_module_get_name(self._module)
    def get_version(self):
        return ggzcore_module_get_version(self._module)
    def get_prot_engine(self):
        return ggzcore_module_get_prot_engine(self._module)
    def get_prot_version(self):
        return ggzcore_module_get_prot_version(self._module)
    def get_author(self):
        return ggzcore_module_get_author(self._module)
    def get_frontend(self):
        return ggzcore_module_get_frontend(self._module)
    def get_url(self):
        return ggzcore_module_get_url(self._module)
    def get_icon_path(self):
        return ggzcore_module_get_icon_path(self._module)
    def get_help_path(self):
        return ggzcore_module_get_help_path(self._module)
    def get_argv(self):
        cdef char **argv
        argv = ggzcore_module_get_argv(self._module)
        alist = []
        # FIXME: How to create the list, no length?

cdef class Game:
    cdef GGZGame *_game
    def __new__(self, Server aserver, Module amodule):
        self._game = NULL
        if aserver:
            self._game = ggzcore_game_new()
            ggzcore_game_init(self._game, aserver._server, amodule._module)
    def __init__(self, *unused, **unused_kw):
        self._callbacks = {}
    def __dealloc__(self):
        if self._game:
            ggzcore_game_free(self._game)
    def free(self):
        if self._game:
            ggzcore_game_free(self._game)
    cdef void set_game(self, GGZGame *agame):
        if self._game:
            self.free()
        self._game = agame
    def add_event_hook(self, event, callback, data=None):
        '''Handle reference counts?'''
        calldata = (callback, data)
        id = ggzcore_game_add_event_hook_full(self._game, event, 
                hookfunc_wrapper, <void*>calldata)
        self._callbacks[id] = callback # Save a reference for callback
        return id
    def remove_event_hook(self, event, hook):
        # We cannot distinguish functions. :(
        if isinstance(hook, int):
            retval = ggzcore_game_remove_event_hook_id(self._game, event, hook)
            if hook in self._callbacks:
                del self._callbacks[hook]
        return retval
    def get_control_fd(self):
        return ggzcore_game_get_control_fd(self._game)
    def set_server_fd(self, fd):
        ggzcore_game_set_server_fd(self._game, fd)
    def get_module(self):
        cdef GGZModule *amodule
        cdef Module pymodule
        amodule = ggzcore_game_get_module(self._game)
        pymodule = Module()
        pymodule.set_module(amodule)
        return pymodule
    def launch(self):
        return ggzcore_game_launch(self._game)
    def read_data(self):
        return ggzcore_game_read_data(self._game)

# vim:ts=8:sw=4:expandtab
